@@ -1,3 +1,249 @@
 <?xml version="1.0"?>
 <datatypes>
+	<datatype name="bool"/>
+	<datatype name="bytea"/>
+	<datatype name="char"/>
+	<datatype name="name"/>
+	<datatype name="int8"/>
+	<datatype name="bigserial"/>
+	<datatype name="int2"/>
+	<datatype name="int2vector"/>
+	<datatype name="int4"/>
+	<datatype name="serial"/>
+	<datatype name="regproc"/>
+	<datatype name="text"/>
+	<datatype name="oid"/>
+	<datatype name="tid"/>
+	<datatype name="xid"/>
+	<datatype name="cid"/>
+	<datatype name="oidvector"/>
+	<datatype name="pg_type"/>
+	<datatype name="pg_attribute"/>
+	<datatype name="pg_proc"/>
+	<datatype name="pg_class"/>
+	<datatype name="smgr"/>
+	<datatype name="point"/>
+	<datatype name="lseg"/>
+	<datatype name="path"/>
+	<datatype name="box"/>
+	<datatype name="polygon"/>
+	<datatype name="line"/>
+	<datatype name="_line"/>
+	<datatype name="float4"/>
+	<datatype name="float8"/>
+	<datatype name="abstime"/>
+	<datatype name="reltime"/>
+	<datatype name="tinterval"/>
+	<datatype name="unknown"/>
+	<datatype name="circle"/>
+	<datatype name="_circle"/>
+	<datatype name="money"/>
+	<datatype name="_money"/>
+	<datatype name="macaddr"/>
+	<datatype name="inet"/>
+	<datatype name="cidr"/>
+	<datatype name="_bool"/>
+	<datatype name="_bytea"/>
+	<datatype name="_char"/>
+	<datatype name="_name"/>
+	<datatype name="_int2"/>
+	<datatype name="_int2vector"/>
+	<datatype name="_int4"/>
+	<datatype name="_regproc"/>
+	<datatype name="_text"/>
+	<datatype name="_oid"/>
+	<datatype name="_tid"/>
+	<datatype name="_xid"/>
+	<datatype name="_cid"/>
+	<datatype name="_oidvector"/>
+	<datatype name="_bpchar"/>
+	<datatype name="_varchar"/>
+	<datatype name="_int8"/>
+	<datatype name="_point"/>
+	<datatype name="_lseg"/>
+	<datatype name="_path"/>
+	<datatype name="_box"/>
+	<datatype name="_float4"/>
+	<datatype name="_float8"/>
+	<datatype name="_abstime"/>
+	<datatype name="_reltime"/>
+	<datatype name="_tinterval"/>
+	<datatype name="_polygon"/>
+	<datatype name="aclitem"/>
+	<datatype name="_aclitem"/>
+	<datatype name="_macaddr"/>
+	<datatype name="_inet"/>
+	<datatype name="_cidr"/>
+	<datatype name="bpchar"/>
+	<datatype name="varchar"/>
+	<datatype name="date"/>
+	<datatype name="time"/>
+	<datatype name="timestamp"/>
+	<datatype name="_timestamp"/>
+	<datatype name="_date"/>
+	<datatype name="_time"/>
+	<datatype name="timestamptz"/>
+	<datatype name="_timestamptz"/>
+	<datatype name="interval"/>
+	<datatype name="_interval"/>
+	<datatype name="_numeric"/>
+	<datatype name="timetz"/>
+	<datatype name="_timetz"/>
+	<datatype name="bit"/>
+	<datatype name="_bit"/>
+	<datatype name="varbit"/>
+	<datatype name="_varbit"/>
+	<datatype name="numeric"/>
+	<datatype name="refcursor"/>
+	<datatype name="_refcursor"/>
+	<datatype name="regprocedure"/>
+	<datatype name="regoper"/>
+	<datatype name="regoperator"/>
+	<datatype name="regclass"/>
+	<datatype name="regtype"/>
+	<datatype name="_regprocedure"/>
+	<datatype name="_regoper"/>
+	<datatype name="_regoperator"/>
+	<datatype name="_regclass"/>
+	<datatype name="_regtype"/>
+	<datatype name="record"/>
+	<datatype name="cstring"/>
+	<datatype name="any"/>
+	<datatype name="anyarray"/>
+	<datatype name="void"/>
+	<datatype name="trigger"/>
+	<datatype name="language_handler"/>
+	<datatype name="internal"/>
+	<datatype name="opaque"/>
+	<datatype name="anyelement"/>
+	<datatype name="pg_autovacuum"/>
+	<datatype name="pg_attrdef"/>
+	<datatype name="pg_constraint"/>
+	<datatype name="pg_inherits"/>
+	<datatype name="pg_index"/>
+	<datatype name="pg_operator"/>
+	<datatype name="pg_opclass"/>
+	<datatype name="pg_am"/>
+	<datatype name="pg_amop"/>
+	<datatype name="pg_amproc"/>
+	<datatype name="pg_language"/>
+	<datatype name="pg_largeobject"/>
+	<datatype name="pg_aggregate"/>
+	<datatype name="pg_statistic"/>
+	<datatype name="pg_rewrite"/>
+	<datatype name="pg_trigger"/>
+	<datatype name="pg_listener"/>
+	<datatype name="pg_description"/>
+	<datatype name="pg_cast"/>
+	<datatype name="pg_namespace"/>
+	<datatype name="pg_conversion"/>
+	<datatype name="pg_depend"/>
+	<datatype name="pg_database"/>
+	<datatype name="pg_tablespace"/>
+	<datatype name="pg_pltemplate"/>
+	<datatype name="pg_authid"/>
+	<datatype name="pg_auth_members"/>
+	<datatype name="pg_shdepend"/>
+	<datatype name="pg_shdescription"/>
+	<datatype name="pg_toast_2604"/>
+	<datatype name="pg_toast_2606"/>
+	<datatype name="pg_toast_2609"/>
+	<datatype name="pg_toast_1255"/>
+	<datatype name="pg_toast_2618"/>
+	<datatype name="pg_toast_2619"/>
+	<datatype name="pg_toast_1260"/>
+	<datatype name="pg_toast_1262"/>
+	<datatype name="pg_toast_2396"/>
+	<datatype name="pg_roles"/>
+	<datatype name="pg_shadow"/>
+	<datatype name="pg_group"/>
+	<datatype name="pg_user"/>
+	<datatype name="pg_rules"/>
+	<datatype name="pg_views"/>
+	<datatype name="pg_tables"/>
+	<datatype name="pg_indexes"/>
+	<datatype name="pg_stats"/>
+	<datatype name="pg_locks"/>
+	<datatype name="pg_cursors"/>
+	<datatype name="pg_prepared_xacts"/>
+	<datatype name="pg_prepared_statements"/>
+	<datatype name="pg_settings"/>
+	<datatype name="pg_timezone_abbrevs"/>
+	<datatype name="pg_timezone_names"/>
+	<datatype name="pg_stat_all_tables"/>
+	<datatype name="pg_stat_sys_tables"/>
+	<datatype name="pg_stat_user_tables"/>
+	<datatype name="pg_statio_all_tables"/>
+	<datatype name="pg_statio_sys_tables"/>
+	<datatype name="pg_statio_user_tables"/>
+	<datatype name="pg_stat_all_indexes"/>
+	<datatype name="pg_stat_sys_indexes"/>
+	<datatype name="pg_stat_user_indexes"/>
+	<datatype name="pg_statio_all_indexes"/>
+	<datatype name="pg_statio_sys_indexes"/>
+	<datatype name="pg_statio_user_indexes"/>
+	<datatype name="pg_statio_all_sequences"/>
+	<datatype name="pg_statio_sys_sequences"/>
+	<datatype name="pg_statio_user_sequences"/>
+	<datatype name="pg_stat_activity"/>
+	<datatype name="pg_stat_database"/>
+	<datatype name="pg_toast_10767"/>
+	<datatype name="table_constraints"/>
+	<datatype name="table_privileges"/>
+	<datatype name="tables"/>
+	<datatype name="cardinal_number"/>
+	<datatype name="character_data"/>
+	<datatype name="sql_identifier"/>
+	<datatype name="information_schema_catalog_name"/>
+	<datatype name="time_stamp"/>
+	<datatype name="applicable_roles"/>
+	<datatype name="administrable_role_authorizations"/>
+	<datatype name="attributes"/>
+	<datatype name="check_constraint_routine_usage"/>
+	<datatype name="check_constraints"/>
+	<datatype name="column_domain_usage"/>
+	<datatype name="column_privileges"/>
+	<datatype name="column_udt_usage"/>
+	<datatype name="columns"/>
+	<datatype name="constraint_column_usage"/>
+	<datatype name="constraint_table_usage"/>
+	<datatype name="domain_constraints"/>
+	<datatype name="domain_udt_usage"/>
+	<datatype name="domains"/>
+	<datatype name="enabled_roles"/>
+	<datatype name="key_column_usage"/>
+	<datatype name="parameters"/>
+	<datatype name="referential_constraints"/>
+	<datatype name="role_column_grants"/>
+	<datatype name="role_routine_grants"/>
+	<datatype name="role_table_grants"/>
+	<datatype name="role_usage_grants"/>
+	<datatype name="routine_privileges"/>
+	<datatype name="routines"/>
+	<datatype name="schemata"/>
+	<datatype name="sequences"/>
+	<datatype name="sql_features"/>
+	<datatype name="pg_toast_10737"/>
+	<datatype name="sql_implementation_info"/>
+	<datatype name="pg_toast_10742"/>
+	<datatype name="sql_languages"/>
+	<datatype name="pg_toast_10747"/>
+	<datatype name="sql_packages"/>
+	<datatype name="pg_toast_10752"/>
+	<datatype name="sql_parts"/>
+	<datatype name="pg_toast_10757"/>
+	<datatype name="sql_sizing"/>
+	<datatype name="pg_toast_10762"/>
+	<datatype name="sql_sizing_profiles"/>
+	<datatype name="tabelle1"/>
+	<datatype name="tabelle2"/>
+	<datatype name="triggered_update_columns"/>
+	<datatype name="triggers"/>
+	<datatype name="usage_privileges"/>
+	<datatype name="view_column_usage"/>
+	<datatype name="view_routine_usage"/>
+	<datatype name="view_table_usage"/>
+	<datatype name="views"/>
+	<datatype name="data_type_privileges"/>
+	<datatype name="element_types"/>
 </datatypes>
